--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,6 @@
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
-        <!-- link rel="stylesheet" href="/css/pygments.css"-->
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
@@ -19,7 +18,7 @@
         <div class="container">
           <div class="site">
             <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+              <h1 class="title"><a href="/"> Shane Weng </a></h1>
               <a class="extra" href="/">home</a>
             </div>
 
@@ -28,15 +27,15 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Shane Weng<br />
+                  Software Engineering Consultant<br />
+                  shane @ baiyunconsulting . com
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/swcool/">github.com/swcool</a><br />
+                  <a href="http://twitter.com/baiyungroup/">twitter.com/baiyungroup</a><br />
                 </p>
               </div>
             </div>
