--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,34 @@
----
-layout: default
----
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
-<div class="post">
-{{ content }}
-</div>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <title></title>
+  <meta name="Generator" content="Cocoa HTML Writer">
+  <meta name="CocoaVersion" content="1187.39">
+  <style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times}
+    p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; min-height: 14.0px}
+  </style>
+</head>
+<body>
+<p class="p1">--- layout: default ---</p>
+<h2 style="margin: 0.0px 0.0px 14.0px 0.0px; font: 18.0px Times"><b>{{ page.title }}</b></h2>
+<p class="p3">{{ page.date | date_to_string }}</p>
+<p class="p1">{{ content }}</p>
+<p class="p4"><br></p>
+<p class="p1"><span class="Apple-converted-space"> </span>&lt;script type="text/javascript"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */</p>
+<p class="p1"><span class="Apple-converted-space">    </span>var disqus_shortname = 'swcool-gh'; // required: replace example with your forum shortname</p>
+<p class="p4"><br></p>
+<p class="p1"><span class="Apple-converted-space">    </span>/* * * DON'T EDIT BELOW THIS LINE * * */</p>
+<p class="p1"><span class="Apple-converted-space">    </span>(function () {</p>
+<p class="p1"><span class="Apple-converted-space">        </span>var s = document.createElement('script'); s.async = true;</p>
+<p class="p1"><span class="Apple-converted-space">        </span>s.type = 'text/javascript';</p>
+<p class="p1"><span class="Apple-converted-space">        </span>s.src = '//' + disqus_shortname + '.disqus.com/count.js';</p>
+<p class="p1"><span class="Apple-converted-space">        </span>(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);</p>
+<p class="p1"><span class="Apple-converted-space">    </span>}());</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;/script&gt;</p>
+</body>
+</html>
