add bootstrap 3.0 css dist min library

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,10 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+        <!-- Bootstrap 3.0.0 CSS -->
+        <!--link rel="stylesheet" href="/css/bootstrap.min.css"-->
+        <!--link rel="stylesheet" href="/css/bootstrap-theme.min.css"-->
+
     </head>
     <body>
 
