--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
@@ -9,12 +10,11 @@
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
+        <!-- Bootstrap 3.0.0 CSS -->
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
-
-        <!-- Bootstrap 3.0.0 CSS -->
-        <!--link rel="stylesheet" href="/css/bootstrap.min.css"-->
-        <!--link rel="stylesheet" href="/css/bootstrap-theme.min.css"-->
 
     </head>
     <body>
@@ -45,6 +45,5 @@
             </div>
           </div>
         </div> <!-- /container -->
-
     </body>
 </html>
