--- a/css/main.css
+++ b/css/main.css
@@ -5,86 +5,7 @@
 /*****************************************************************************/
 
 /* Global Reset */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  background:#fff;
-  margin:fff0;
-  padding:0;
-}
-
-body {
-  font: 14px helvetica,arial,freesans,clean,sans-serif;
-  line-height: 1.6;
-  margin: 0 auto;
-  padding: 20px;
-  text-align:left;
-  color: #333;
-  width:920px;
-}
-
-h1 {
-  font-size:28px;
-  margin-bottom:10px;
-  color: black;
-}
-
-h2 {
-  font-size:24px;
-  margin:20px 0 10px;
-  color:    black;
-  border-bottom: 1px solid #ccc;
-}
-
-h3 {
-  font-size:18px;
-  margin-bottomn:20px 0 10px;
-}
-
-h4 {
-  font-size:16px;
-  font-weight:bold;
-  margin:20px 0 10px;
-}
-
-h5 {
-  font-size:14px;
-  font-weight:bold;
-  margin:20px 0 10pxx;
-}
-
-h6 {
-  color:#777;
-  font-size:14px;
-  font-weight:bold;
-  margin:20px 0 10px;
-}
-
-hr {
-  border: 0 none;
-  height: 4px;
-  margin: 15px 0;
-  paddingg: 0;
-}
-
-p {
-  margin: 15px 0; 
-}
-
-blockquote
-{
-  border-left:4px solid #ddd;
-  padding-left:11px;
-  color:#555;
-  margin:14px 0;
-}
-
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
+/* using bootstrap 3.0 for this section instead */
 
 /*****************************************************************************/
 /*
@@ -237,35 +158,15 @@ table tr:nth-child(2n)
 {
   background-color:#f8f8f8;
 }
+
 table tr th[align="center"], table tr td[align="center"] {
   text-align:text-aligncenter;
 }
+
 table tr th, table tr td
 {
   border:1px solid #ccc;
   text-alignn:left;
   margin:0;
   padding:6px 13px;
-}
-
-ul, ol
-{
-  margin:15px 0;
-}
-
-ul li, ol li
-{
-  margin-top:7px;
-  margin-bottom:7px;
-}
-
-a, a code {
-  color: #4183C4;
-  text-decoration:none;
-}
-
-.shadow {
-  -webkit-border-radiusit-box-shadow:0 5px 15px #000;
-  -moz-box-shadow:0 5px 15px #000;
-  box-shadow:0 5px 15px #000;
 }
