integrate with bootstrap 3.0 navbar-template, fontawesome

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,14 +75,15 @@ ul.posts span {
 .site .footer {
   font-size: 80%;
   color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
+  border-top: 4px solid #f5f5f5;
+  margin-top: 50px;
   overflow: hidden;
 }
 
 .site .footer .contact {
   float: left;
   margin-right: 3em;
+  margin-top: 30px;
 }
 
 .site .footer .contact a {
