--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/assets/css/syntax.css">
@@ -16,34 +15,78 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/assets/css/main.css">
 
+        <!-- Custom styles for this template -->
+        <link href="/assets/css/navbar.css" rel="stylesheet">
+
+        <!-- FontAwosome -->
+        <link href="/assets/css/font-awesome.min.css" rel="stylesheet">
+
+        <!--[if lt IE 9]>
+          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     </head>
     <body>
+      <div class="container">
 
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/"> Shane Weng </a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
+        <!-- Static navbar -->
+        <div class="navbar navbar-default">
+            <div class="navbar-header">
+            <!-- div class="container" -->
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" style="font-size:30px" href="/">Shane Weng</a>
+           </div>
+           <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a title="Post List" href="/">Blog</a></li>
+                <li><a title="Projects" href="/projects">Projects</a></li>
+                <li><a title="Atom Feed" href="/atom.xml">Feed</a></li>
+              </ul>
+           </div><!--/.nav-collapse -->
+       </div>
 
-                {{ content }}
+       <div class="site">
+       {{ content }}
 
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  Shane Weng<br />
-                  Software Engineering Consultant<br />
-                  shane @ baiyunconsulting . com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/swcool/">github.com/swcool</a><br />
-                  <a href="http://twitter.com/baiyungroup/">twitter.com/baiyungroup</a><br />
-                </p>
-              </div>
-            </div>
+       <div class="footer">
+          <div class="contact">
+             <p>
+               <i class="icon icon-envelope icon-3x" style="color:green"></i>
+               <div>shane @baiyunconsulting .com</div>
+             </p>
           </div>
-        </div> <!-- /container -->
-    </body>
+          <div class="contact">
+            <p>
+               <a href="http://twitter.com/baiyungroup/">
+                 <i class="icon icon-twitter icon-3x" style="color:blue"></i>
+                 <div>follow me on twitter</div>
+               </a>
+             </p>
+           </div>
+          <div class="contact">
+             <p>
+               <a href="http://github.com/swcool/">
+                 <i class="icon icon-github icon-3x" style="color:black"></i>
+                 <div>see me in github</div>
+               </a>
+            </p>
+          </div>
+          <div class="contact">
+             <p>
+               <a href="https://plus.google.com/u/0/106544236384520652115/posts">
+                 <i class="icon icon-google-plus icon-3x" style="color:red"></i>
+                 <div>circle me at Google+ </div>
+               </a>
+            </p>
+        </div>
+      </div>
+    </div>
+    </div> <!-- /container -->
+
+  </body>
+  <script src="/assets/js/jquery.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
 </html>
