--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
        <div class="footer">
           <div class="contact">
              <p>
-               <i class="icon icon-envelope icon-3x" style="color:green"></i>
+               <i class="icon icon-envelope icon-3x" style="color:#660099"></i>
                <div>shane @baiyunconsulting .com</div>
              </p>
           </div>
@@ -62,7 +62,7 @@
             <p>
                <a href="http://twitter.com/baiyungroup/">
                  <i class="icon icon-twitter icon-3x" style="color:blue"></i>
-                 <div>follow me on twitter</div>
+                 <div>follow on twitter</div>
                </a>
              </p>
            </div>
@@ -70,7 +70,7 @@
              <p>
                <a href="http://github.com/swcool/">
                  <i class="icon icon-github icon-3x" style="color:black"></i>
-                 <div>see me in github</div>
+                 <div>meet in github</div>
                </a>
             </p>
           </div>
@@ -78,7 +78,7 @@
              <p>
                <a href="https://plus.google.com/u/0/106544236384520652115/posts">
                  <i class="icon icon-google-plus icon-3x" style="color:red"></i>
-                 <div>circle me at Google+ </div>
+                 <div>circle at Google+ </div>
                </a>
             </p>
         </div>
