update lab page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
            <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a title="Post List" href="/">Blog</a></li>
-                <li><a title="Projects" href="/projects">Projects</a></li>
+                <li><a title="Projects" href="/lab.html">Lab</a></li>
                 <li><a title="Atom Feed" href="/atom.xml">Feed</a></li>
               </ul>
            </div><!--/.nav-collapse -->
