remove active in nav bar since it is not working

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
               <a class="navbar-brand" style="font-size:30px" href="/">Shane Weng</a>
            </div>
            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a title="Post List" href="/">Blog</a></li>
+              <ul class="nav nav-pills navbar-nav navbar-right">
+                <li><a title="Post List" href="/">Blog</a></li>
                 <li><a title="Projects" href="/lab.html">Lab</a></li>
                 <li><a title="Atom Feed" href="/atom.xml">Feed</a></li>
               </ul>
