--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,9 @@
            </div>
            <div class="navbar-collapse collapse">
               <ul class="nav nav-pills navbar-nav navbar-right">
-                <li><a title="Post List" href="/">Blog</a></li>
-                <li><a title="Projects" href="/lab.html">Lab</a></li>
-                <li><a title="Atom Feed" href="/atom.xml">Feed</a></li>
+                <li><a title="List Posts" href="/">Blog</a></li>
+                <li><a title="Lab Contents" href="/lab.html">Lab</a></li>
+                <li><a title="Atom Feed" href="/assets/atom.xml">Feed</a></li>
               </ul>
            </div><!--/.nav-collapse -->
        </div>
