--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
               <ul class="nav nav-pills navbar-nav navbar-right">
                 <li><a title="List Posts" href="/">Blog</a></li>
                 <li><a title="Lab Contents" href="/lab.html">Lab</a></li>
+                <li><a title="About me" href="/about.html">About</a></li>
                 <li><a title="Atom Feed" href="/assets/atom.xml">Feed</a></li>
               </ul>
            </div><!--/.nav-collapse -->
