--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/assets/css/syntax.css">
-
-        <!-- Bootstrap 3.0.0 CSS -->
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/assets/css/main.css">
-
-        <!-- Custom styles for this template -->
-        <link href="/assets/css/navbar.css" rel="stylesheet">
-
-        <!-- FontAwosome -->
-        <link href="/assets/css/font-awesome.min.css" rel="stylesheet">
-
-        <!--[if lt IE 9]>
-          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-    </head>
+    {% include header.html %}
     <body>
       <div class="container">
 
@@ -50,41 +26,10 @@
        </div>
 
        <div class="site">
-       {{ content }}
+         {{ content }}
 
-       <div class="footer">
-          <div class="contact">
-             <p>
-               <i class="icon icon-envelope icon-3x" style="color:#660099"></i>
-               <div>shane @baiyunconsulting .com</div>
-             </p>
-          </div>
-          <div class="contact">
-            <p>
-               <a href="http://twitter.com/baiyungroup/">
-                 <i class="icon icon-twitter icon-3x" style="color:blue"></i>
-                 <div>follow on twitter</div>
-               </a>
-             </p>
-           </div>
-          <div class="contact">
-             <p>
-               <a href="http://github.com/swcool/">
-                 <i class="icon icon-github icon-3x" style="color:black"></i>
-                 <div>meet in github</div>
-               </a>
-            </p>
-          </div>
-          <div class="contact">
-             <p>
-               <a href="https://plus.google.com/u/0/106544236384520652115/posts">
-                 <i class="icon icon-google-plus icon-3x" style="color:red"></i>
-                 <div>circle at Google+ </div>
-               </a>
-            </p>
+         {% include footer.html %}
         </div>
-      </div>
-    </div>
     </div> <!-- /container -->
 
   </body>
