--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,10 @@ layout: default
 <div class="post">
 {{ content }}
 </div>
-{% include twitter.html %}
+<div>{% include twitter.html %}</div>
+<div>{% include googleplus.html %}</div>
 <hr>
+
 {% include disqus.html %}
 
 </section>
