add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
     </div> <!-- /container -->
 
   </body>
+  {% include analytics.html %}
+
   <script src="/assets/js/jquery.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
 </html>
