--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 <h2>{{ page.title }}</h2>
 <!-- p class="meta">{{ page.date | date_to_string }}</p -->
 <h5><strong>{{ page.date | date: "%B %e, %Y" }} <small>. {{ page.category }} . 
-      <a href="http://swcool.github.io/{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a></small></strong>
+      <a href="http://swcool.github.io{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a></small></strong>
   <br/><small>Tags: {% for tag in page.tags %} <a href="/tags/{{ tag }}/" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</u></a>  
     {% if forloop.last != true %} {% endif %} {% endfor %} </small><br/><br/>
   <div style="display:inline-block;">{% include twitter.html %}
