--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="contact">
      <p>
        <i class="icon icon-envelope icon-3x" style="color:#660099"></i>
-       <div>shane @baiyunconsulting .com</div>
+       <div><a href="mailto:shane.weng@gmail.com">e-mail me</a></div>
      </p>
   </div>
   <div class="contact">
