--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
 <div class="footer">
   <div class="contact">
      <p>
+       <a href="mailto:shane.weng@gmail.com">
        <i class="icon icon-envelope icon-3x" style="color:#660099"></i>
-       <div><a href="mailto:shane.weng@gmail.com">e-mail me</a></div>
+       <div>e-mail me</div>
+     </a>
      </p>
   </div>
   <div class="contact">
