--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -14,7 +14,7 @@ layout: default
 				<tr>
 				  <td>
 					<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-					<p><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://swcool.github.com{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
+					<p><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://www.shaneweng.com/blog{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
 					<br/><small><i>{{ post.summary }}</i></small>
 					<br/><small><i class="icon-tags"></i> {% for tag in post.tags %} <a href="/tags/{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</url></a>  {% if forloop.last != true %} {% endif %} {% endfor %} </small></p>
 				  </td>
