add toggleable sidebar with subscribe action

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
         <li><a title="Lab Contents" href="/lab.html">Lab</a></li>
         <li><a title="About me" href="/about.html">About</a></li>
         <li><a title="Atom Feed" href="/assets/atom.xml">Feed</a></li>
+        <li><a title="Toggle SideBar" href="#sidebar-toggle" class="btn" id="sidebar-toggle">Sidebar</a></li>
       </ul>
    </div><!--/.nav-collapse -->
 </div>
