--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/main.css">
-
+    <link rel="stylesheet" href="/assets/css/sidebar.css">
+    
     <!-- Custom styles for this template -->
     <link href="/assets/css/navbar.css" rel="stylesheet">
 
