--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,37 @@
   {% include head.html %}
   <body>
     <div class="container">
-      {% include header.html %}
-
-       <div class="site">
-         {{ content }}
-
-         {% include footer.html %}
+      <div class="site">
+        <div>
+          {% include header.html %}
         </div>
-    </div> <!-- /container -->
+        <div id="wrapper">
+          <div id="sidebar-wrapper">
+               {% include sidebar.html %}
+          </div> 
+          <div id="content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                       {{ content }}
+                    </div>
+                </div>
+            </div>
+          </div>          
+        </div>  
+        <div>
+          {% include footer.html %}
+        </div>
+      </div>
 
-  </body>
+    </div> <!-- /container -->
   <script src="/assets/js/jquery.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
+  <script>
+    $("#sidebar-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+  </script>
+  </body>
 </html>
