--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,7 @@ ul.posts span {
 .site {
   font-size: 115%;
   text-align: justify;
-  width: 42em;
+  min-width: 42em;
   margin: 3em auto 2em;
   line-height: 1.5em;
 }
