--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,29 +1,57 @@
----
-layout: default
----
-<div class="container">
-	<div class="content">
-		<div class="row">
-<h2>{{page.title}}</h2>
+<!DOCTYPE html>
+<html>
+  {% include head.html %}
+<body>
 
-<table class="table table-striped">
-  <tbody>
-	{% for post in site.posts %}	
-		{% for tag in post.tags %}
-			{% if tag == page.tag %}
-				<tr>
-				  <td>
-					<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-					<p><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://www.shaneweng.com/blog{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
-					<br/><small><i>{{ post.summary }}</i></small>
-					<br/><small><i class="icon-tags"></i> {% for tag in post.tags %} <a href="/tags/{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</url></a>  {% if forloop.last != true %} {% endif %} {% endfor %} </small></p>
-				  </td>
-				</tr>
-			{% endif %}
-		{% endfor %}
-	{% endfor %}			
-  </tbody>
-</table>
-    </div>
-  </div>
-</div>
+<div class="container">
+    <div class="site">
+        <div>
+          {% include header.html %}
+        </div>
+        <div id="wrapper">
+          <div id="sidebar-wrapper">
+               {% include sidebar.html %}
+          </div> 
+          <div id="content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                    	<h3 class="title">{{page.title}}</h3>
+						<table class="table table-striped">
+						  <tbody>
+							{% for post in site.posts %}	
+								{% for tag in post.tags %}
+									{% if tag == page.tag %}
+										<tr>
+										  <td>
+											<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+											<p><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="http://www.shaneweng.com/blog{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
+											<br/><small><i>{{ post.summary }}</i></small>
+											<br/><small><i class="icon-tags"></i> {% for tag in post.tags %} <a href="/tags/{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</url></a>  {% if forloop.last != true %} {% endif %} {% endfor %} </small></p>
+										  </td>
+										</tr>
+									{% endif %}
+								{% endfor %}
+							{% endfor %}			
+						  </tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div>
+          {% include footer.html %}
+        </div>
+      </div>
+
+    </div> <!-- /container -->
+    <script src="/assets/js/jquery.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
+  <script>
+    $("#sidebar-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+  </script>
+  </body>
+</html>
