--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
-<div>
+<div class="sidebar">
 {% include subscribe.html %}
-</div>
+
 <div>
   <h4>Recent Posts</h4>
   <ul class="posts">  
@@ -12,6 +12,8 @@
 	   </li>  
 	{% endfor %}  
   </ul>
+</div>
+
 </div>
 
 
