--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,34 +3,27 @@ layout: default
 ---
 
 <section class="content">
-<h2>{{ page.title }}</h2>
-<!-- p class="meta">{{ page.date | date_to_string }}</p -->
-<h5><strong>{{ page.date | date: "%B %e, %Y" }} <small>. {{ page.category }} . <a href="http://swcool.github.io{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a></small></strong>
-  <br/><small>Tags: {% for tag in page.tags %} <a href="/tags/{{ tag }}/" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</u></a>  
-    {% if forloop.last != true %} {% endif %} {% endfor %} </small><br/><br/>
-  <div style="display:inline-block;">{% include twitter.html %}
-    <div style="display:inline-block;">{% include googleplus.html %}</div>
-</h5>
+  {% include post-header.html %}
+  
+  <div class="post">
+  {{ content }}
+  </div>
+  <hr>
 
-<div class="post">
-{{ content }}
-</div>
-<hr>
+  {% include disqus.html %}
 
-{% include disqus.html %}
+  <script type="text/javascript">
+  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+  var disqus_shortname = 'shanewengcom'; // required: replace example with your forum shortname
 
-<script type="text/javascript">
-/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'shanewengcom'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-   (function () {
-          var s = document.createElement('script'); s.async = true;
-          s.type = 'text/javascript';
-          s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-          (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-</script>
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+     (function () {
+            var s = document.createElement('script'); s.async = true;
+            s.type = 'text/javascript';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+            (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+      }());
+  </script>
 
 </section>
 
