--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,21 +1,6 @@
-<script type="text/javascript">
-	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	var disqus_shortname = 'shanewengcom'; 
-	var disqus_identifier = '{{ page.url }}';
-	var disqus_url = 'http://www.shaneweng.com{{ page.url }}';
-
-	/* * * DON'T EDIT BELOW THIS LINE * * */
-	(function () {
-		var s = document.createElement('script'); s.async = true;
-		s.type = 'text/javascript';
-		s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
-		(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-	}());
-</script>
-
 <h2>{{ page.title }}</h2>
-<!-- p class="meta">{{ page.date | date_to_string }}</p -->
-<h5><strong>{{ page.date | date: "%B %e, %Y" }} <small>. {{ page.category }} . <a href="http://swcool.github.io{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a></small></strong>
+
+<h5><strong>{{ page.date | date: "%B %e, %Y" }} <small>. {{ page.category }} . <a href="http://www.shaneweng.com{{ page.url }}#disqus_thread" data-disqus-identifier="{{ page.url }}">Comments</a></small></strong>
   <br/>
 
   <small>Tags: {% for tag in page.tags %} <a href="/tags/{{ tag }}/" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</u></a>  
