--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
   var disqus_shortname = '{{ site.disqus_shortname }}'; 
   var disqus_identifier = '{{ page.url }}';
-  var disqus_url = 'http://www.shaneweng.com{{ page.url }}';
+  var disqus_url = 'http://shaneweng.com{{ page.url }}';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
  (function () {
