update for whole site analytics

--- a/_includes/analytics-sw.html
+++ b/_includes/analytics-sw.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
 
 var _gaq = _gaq || [];
-_gaq.push(['_setAccount', '{{ site.analytics }}']);
+_gaq.push(['_setAccount', '{{ site.analytics-sw }}']);
 _gaq.push(['_trackPageview']);
 
 (function() {
