--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
   </div>
   <div class="contact">
     <p>
-       <a href="http://twitter.com/baiyungroup/">
+       <a href="http://twitter.com/zwcool/">
          <i class="icon icon-twitter icon-3x" style="color:blue"></i>
          <div>follow on twitter</div>
        </a>
